# ccre-scatter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_jscatter_poc.py  app_plotly_poc.py  bench.ipynb  colormap.tsv  docker-compose.yml  example_usage.ipynb  foo.py  monitor.sh  preprocess_uint8.py  profile_memory.py  pyproject.toml  sample_metadata.pq  scatterplot.py  scatterplot_helpers.py
__marimo__/session/: app.py.json  app_jscatter_poc.py.json
ccre_scatter/: __init__.py  scatter_plot.py
ccre_scatter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
