[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccre-scatter"
version = "0.1.0"
description = "Utility functions for creating JScatter scatterplots with cCRE datasets"
authors = [
    {name = "Conrad Bzura", email = "conrad@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "jupyter-scatter>=0.16.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "scikit-learn>=1.3.2",
    "pyarrow>=17.0.0",
    "polars>=1.8.2",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
